# pathtracer

./: Cargo.toml  README.md
benches/: pegasus.rs  spheres.rs
examples/: bouncing_spheres.rs  cornell_box.rs  cornell_box_ball.rs  diffuse_sphere.rs  dragon.rs  earth.rs  final_scene.rs  funky_monkey.rs  glass_sphere.rs  metal_sphere.rs  pegasus.rs  plasma_test.rs  quads.rs  random_scene.rs  random_scene_2.rs  random_scene_3.rs  simple_light.rs  smoke_cornell_box.rs  triangle_test.rs
src/: camera.rs  hit.rs  lib.rs  ray.rs  render.rs  vec3.rs
src/hitables/: aabb.rs  bvh.rs  hitable_list.rs  mod.rs
src/hittables/: aabb.rs  bvh.rs  hittable_list.rs  mod.rs
src/material/: dielectric.rs  isotropic.rs  lambertian.rs  light_source.rs  metalic.rs  mod.rs
src/misc/: algs.rs  filter.rs  interval.rs  mod.rs  multizip.rs  onb.rs  pdf.rs  perlin.rs  ppm.rs
src/primitive/: hitbox.rs  mesh.rs  mod.rs  moving_sphere.rs  quad.rs  rectangle.rs  sphere.rs  triangle.rs
src/texture/: blue_noise_texture.rs  checker_texture.rs  constant_texture.rs  image_texture.rs  mod.rs  perlin_noise_texture.rs  plasma_texture.rs
src/transform/: constant_medium.rs  flip_face.rs  mod.rs  rotate.rs  translate.rs
