[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Adollo"]
edition = "2018"

[dependencies]
itertools = "0.8.0"
rayon = "*"
rand = "0.6.5"
num-traits = "0.2"
objekt-clonable = "0.2.2"
png = "0.16.5"
permutation_iterator = "0.1.2"
arr_macro = "0.1.3"
wavefront_obj = "8.0.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"